--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "cross-env webpack-dev-server --mode development",
+    "dev": "cross-env NODE_PATH=src webpack-dev-server --mode development",
     "build": "webpack --mode development"
   },
   "dependencies": {
@@ -15,12 +15,16 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.1",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
