--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     ]
   },
   "dependencies": {
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
