CLN: Prettier 괄호 규칙 변경 & 커밋시 eslint 검사 통과해야 가능 하게 변경

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx,json,css,md}": [
+    "*.{ts,tsx}": [
+      "eslint --fix",
       "prettier --write",
       "git add"
     ]
